# python_gcp_API

./: .gitignore  README.md  pyproject.toml
src/python_gcp_API/: main.py
src/python_gcp_API/libraries/: bigquery_api.py  storage_api.py
src/python_gcp_API/utils/: credentials.py
test/test_python_gcp_API/: test_bigquery_api.py  test_storage_api.py
